# ROS_CV_Electromagnets_Ferrofluid_Control

camera_calib/: cam1.yaml  cam2.yaml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/image_transport_tutorial/: tracking2Dmsg.h
devel/lib/camera_info_manager/: unit_test
devel/lib/ferro_tracking_control/: ferro_tracking_control_node
devel/lib/image_transport_tutorial/: angle_pos_sub  my_publisher  my_subscriber
devel/lib/pkgconfig/: camera_info_manager.pc  ferro_tracking_control.pc  image_transport_tutorial.pc
devel/lib/python2.7/dist-packages/image_transport_tutorial/msg/: __init__.py  _tracking2Dmsg.py
devel/share/camera_info_manager/cmake/: camera_info_managerConfig.cmake
devel/share/ferro_tracking_control/cmake/: ferro_tracking_control-msg-extras.cmake  ferro_tracking_control-msg-paths.cmake  ferro_tracking_controlConfig.cmake
devel/share/gennodejs/ros/image_transport_tutorial/msg/: _index.js  (+1 more)
devel/share/image_transport_tutorial/cmake/: image_transport_tutorial-msg-extras.cmake  image_transport_tutorial-msg-paths.cmake  image_transport_tutorialConfig.cmake
devel/share/roseus/ros/ferro_tracking_control/: manifest.l
devel/share/roseus/ros/image_transport_tutorial/: manifest.l
install/: .rosinstall  setup.sh
install/share/ferro_tracking_control/cmake/: ferro_tracking_controlConfig.cmake
src/camera_tutorial/: CMakeLists.txt  package.xml
src/camera_tutorial/launch/: one_cam.launch  two_cam_ract.launch
src/camera_tutorial/msg/: tracking2Dmsg.msg
src/camera_tutorial/src/: angle_pos_sub.cpp  motor_test.py  motor_test2.py  my_publisher.cpp  my_subscriber.cpp  python_sub.py
src/camera_tutorial/src/Phidget22/: ChannelSubclass.py  DeviceID.py  ErrorCode.py  ErrorEventCode.py  HubPortMode.py  IRCodeEncoding.py  IRCodeLength.py  Net.py  Phidget.py  PhidgetException.py  PhidgetSupport.py  StepperControlMode.py
src/camera_tutorial/src/Phidget22/Devices/: Dictionary.py  IR.py  LCD.py  Log.py  Magnetometer.py  MotorPositionController.py  Spatial.py
src/ferro_tracking_control/: CMakeLists.txt  package.xml
src/fluid_controller/: CMakeLists.txt  package.xml  setup.py
src/fluid_controller/scripts/pyscripts/: fluid_ctr
(+5 files in other folders)
